# Simple-selenium-app

./: config.py  main.py  pyproject.toml
